syntax = "proto3";

package gov.cms.mpsm.rda.v1;

option java_multiple_files = true;

import "google/protobuf/timestamp.proto";
import "rda/v1/change_type.proto";
import "rda/v1/mcs/mcs_claim.proto";

message McsClaimChange {
  google.protobuf.Timestamp timestamp = 1;
  int64 seq = 2;
  ChangeType change_type = 3;

  string icn = 4;

  optional rda.v1.mcs.McsClaim claim = 5;
}
